ajusta de responsividade para iphone

--- a/index.html
+++ b/index.html
@@ -24,8 +24,11 @@
           <button class="btn" id="start-btn">Iniciar</button>
         </div>
         <div class="logos">
-          <img src="imgs/logo1.jpg" alt="Logo 1" class="logo" />
+          <img src="imgs/logoep.webp" alt="Logo 1" class="logo" />
         </div>
+        <footer class="footer">
+          <p>Desenvolvido por Ana Flávia, João Pedro, <br> Felipe Silva, Rafael Silva e Joaquim Neto</p>
+        </footer>
       </div>
     </div>
 
@@ -33,7 +36,8 @@
     <div id="selection-screen" class="screen hidden">
       <div class="container">
         <div class="header">
-            <button class="back-btn" onclick="goBackToStart()">⟵ㅤㅤㅤ Voltar para o início</button>
+            <button class="back-btn" onclick="goBackToStart()">⟵</button>
+            <h2>Voltar para o início</h2>
         </div>
 
         <div class="questions-grid">
@@ -86,15 +90,15 @@
             <span class="question-number">12</span>
           </div>
           <div class="question-box not-answered" data-question="13">
-            <img src="imgs/img03.jpg" alt="imagem pergunta" class="question-img">
+            <img src="imgs/img13.jpg" alt="imagem pergunta" class="question-img">
             <span class="question-number">13</span>
           </div>
           <div class="question-box not-answered" data-question="14">
-            <img src="imgs/img03.jpg" alt="imagem pergunta" class="question-img">
+            <img src="imgs/img14.jpg" alt="imagem pergunta" class="question-img">
             <span class="question-number">14</span>
           </div>
           <div class="question-box not-answered" data-question="15">
-            <img src="imgs/img03.jpg" alt="imagem pergunta" class="question-img">
+            <img src="imgs/img15.jpg" alt="imagem pergunta" class="question-img">
             <span class="question-number">15</span>
           </div>
         </div>
